infrastructure/stackgres/configs/stackgres-operator/reference-grant.yaml
# Permite que HTTPRoutes no namespace gateway-api referenciem
# o Service stackgres-restapi neste namespace (gateway API cross-namespace routing)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: stackgres-restapi
  namespace: stackgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-api
  to:
    - group: ""
      kind: Service
      name: stackgres-restapi
